--- a/Proyecto2/SmileSoft/gestion_roles/templates/roles/modificar_rol.html
+++ b/Proyecto2/SmileSoft/gestion_roles/templates/roles/modificar_rol.html
@@ -27,9 +27,15 @@
                         <br>
                         <div class="d-flex justify-content-center">
                             <!--tipo submit para enviar,luego son clases y colores btn, y btnblock para que muestre a lo largo de la tarjeta-->
-                            <input type="submit" value="Modificar y Guardar " class= "btn btn-primary btn-block txt-white" name="_save">
+                            <button class="btn btn-primary" type="submit" style="margin: 10px;">
+                                <i class="bi-save"></i>
+                                Modificar y Guardar 
+                            </button>
                             &nbsp;
-                            <input type="reset" value="Cancelar" class= "btn btn-secondary btn-block txt-white">  
+                           <a href="/roles/listar_roles/ " class="btn btn-danger" style="margin: 10px;">
+                            <i class="bi-x-circle"></i>
+                            Cancelar
+                           </a>
                         
                         </div> 
 
