add mensajes en los html,add un celular en listado

--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_paciente.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_paciente.html
@@ -74,7 +74,7 @@
 				<h1>No hay registros de pacientes</h1>
 				{% endif %}
 
-				{% if messages %}
+				{% comment %} {% if messages %}
 								<ul class="messages">
 								
 									{% for message in messages %}
@@ -89,7 +89,7 @@
 									</li>
 									{% endfor %}
 								</ul>
-								{% endif %}
+								{% endif %} {% endcomment %}
 			{%endif%}
 		</tbody>
 	</table> 
