--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/cerrado.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/cerrado.html
@@ -18,11 +18,15 @@
                            Agendar una cita 
                         </button> {% endcomment %}
 
-                          
-                                <a href="/agendamiento/calendario_usuario" class="btn btn-info">
-                                    <i class="bi bi-calendar"></i>
-                                   Ver Calendario <br>
-                                </a>
+                    
+                        <a href="/agendamiento/calendario_usuario" class="btn btn-info">
+                            <i class="bi bi-calendar"></i>
+                            Ver Calendario <br>
+                        </a>
+                        <a onclick="history.back()" class="btn btn-success">
+                           <i class="bi bi-backspace"></i>
+                           Atrás <br>
+                        </a>
                           
                      
       
