--- a/Proyecto2/SmileSoft/webapp/templates/usuario/listar_usuario.html
+++ b/Proyecto2/SmileSoft/webapp/templates/usuario/listar_usuario.html
@@ -100,7 +100,7 @@
                                         </td>
                                     </tr>
                                     {% endfor %}
-                                
+{% comment %}                                 
                                     {% if messages %}
                                         <ul class="messages">
                                             {% for message in messages %}
@@ -115,7 +115,7 @@
                                                 </li>
                                             {% endfor %}
                                         </ul>
-                                    {% endif %}
+                                    {% endif %} {% endcomment %}
                                 </tbody>
                             </table>
                         </table>
