--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/calendario_mensaje.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/calendario_mensaje.html
@@ -37,6 +37,10 @@
                                 <i class="bi bi-calendar"></i>
                                 Ver Calendario <br>
                             </a>
+                            <a onclick="history.back()" class="btn btn-primary">
+                                                    <i class="bi bi-backspace"></i>
+                                                    Atrás 
+                                                </a>
                               
                         </td>
                         </tr>
