--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/cita_vista.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/cita_vista.html
@@ -18,18 +18,24 @@
                     <br>
                     <center> 
                         {% comment %} <h2> ¿Desea modificar su ultima cita {{persona.nombre}} {{persona.apellido}}? </h2> {% endcomment %}
-                            <h2> En este horario ya fue reservado  </h2>
+                            <h2> <i><b>Ya fue reservado</i></b> en este horario <br> por otro paciente  </h2>
                     </center>
                     <br>
                     <h3> ¿Que desea hacer?</h3>
             
                     <div class="d-flex justify-content-left">
-                      <li><a  class="btn btn-info" href="/agendamiento/usuario_addCita/{{user.numero_documento}}">Agendar una cita </li></a> 
+                      <li><a  class="btn btn-info" href="/agendamiento/usuario_addCita/{{user.numero_documento}}"> <i class="bi bi-journal-check"></i> Agendar una cita </li></a> 
                     
                     </div>
                      
-                      <li><a style="margin: 10px;" href="/agendamiento/calendario_usuario" class="btn btn-primary">Ver calendario
+                    <li><a href="/agendamiento/calendario_usuario" class="btn btn-primary"> <i class="bi bi-calendar-week"></i> Ver calendario
                         </a></li>
+                          
+                    <li><a onclick="history.back()" class="btn btn-success">
+                          
+                       <i class="bi bi-arrow-bar-left"></i>    Atrás <br>
+                        </a></li>
+
                       
                
                 </div>
