--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/fecha_pasada.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/fecha_pasada.html
@@ -14,7 +14,7 @@
                        {% comment %} <center> <small><b> Por favor elija otra fecha</b> </small></center> {% endcomment %}
                         <br>
                         <button  href="/agendamiento/usuario_addCita/{{user.numero_documento}} " class="btn btn-primary" type="submit" style="margin: 10px;">
-                           Agendar una cita 
+                            <i class="bi bi-calendar2-check"></i>  Agendar una cita 
                         </button> 
 
                         <a href="/agendamiento/calendario_usuario" class="btn btn-info">
