--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/horario_reservado.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/horario_reservado.html
@@ -12,14 +12,19 @@
                        <center> <small><b> Por favor realize su cita </b> <i>en un horario diferente </i></small></center>
                        <br>
                         <button  href="/agendamiento/usuario_addCita/{{user.numero_documento}} " class="btn btn-primary" type="submit" style="margin: 10px;">
-                           Agendar una cita 
+                          <i class="bi bi-calendar2-check"></i>  Agendar una cita 
                         </button>
 
                           
-                                <a href="/agendamiento/calendario_usuario" class="btn btn-info">
-                                    <i class="bi bi-calendar"></i>
-                                   Ver Calendario <br>
-                                </a>
+                        <a href="/agendamiento/calendario_usuario" class="btn btn-info">
+                            <i class="bi bi-calendar"></i>
+                            Ver Calendario <br>
+                        </a>
+
+                          <a onclick="history.back()" class="btn btn-success">
+                           <i class="bi bi-backspace"></i>
+                           Atras <br>
+                        </a>
                           
                      
       
