--- a/Proyecto2/SmileSoft/gestion_cobros/templates/listar_cobro_contado.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/listar_cobro_contado.html
@@ -12,6 +12,7 @@
 				<table class="table table-striped table-hover">
 					<thead style="border: 1cm;">
 						<tr>
+							<th>Nro</th>
 							<th>Numero de documento</th>
 							<th>Nombre y apellido</th>
 							<th>Fecha</th>
@@ -24,6 +25,7 @@
 							{% if listado_cobros %}
 							{% for cobro in listado_cobros %}
 							<tr>
+								<td >{{forloop.counter}}</td>
 								<td>{{ cobro.numero_documento }}</td>
 								<td>{{ cobro.razon_social }}</td>
 								<td>{{ cobro.fecha }}</td>
