--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/mensajes/tratamiento_asignado_exitoso.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/mensajes/tratamiento_asignado_exitoso.html
@@ -9,11 +9,11 @@
             <!-- <div class="card-body"> -->
                 <br>
                 <center>
-                    <h3>¡Operación Exitosa!</h3>
+                    <h3>¡Operación exitosa, el tratamiento fue asignado !</h3>
                     <br>
                     <a class="btn btn-primary" href ="/tratamiento/listar_paciente2/">
                         <i class="bi bi-check2-square"></i>
-                        OK
+                        Aceptar
                     </a>
                 </center>
                 <br>
