--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos.html
@@ -96,7 +96,7 @@
                                 </tr>
                             {% endfor %}
 
-                            {% if messages %}
+                            {% comment %} {% if messages %}
                                 <ul class="messages">
                                     {% for message in messages %}
                                         <li>
@@ -112,7 +112,7 @@
                                         </li>
                                     {% endfor %}
                                 </ul>
-                            {% endif %}
+                            {% endif %} {% endcomment %}
                         </tbody>
                     </table>
                 </table>
