CAMBIOS EN INSUMOS VISTA DE LISTAR INSUMOS ASIGNADOS

--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos.html
@@ -76,10 +76,10 @@
                                         {%if perms.gestion_tratamiento.change_tratamiento%}
                                         <!-- <a href="#" class="btn btn-success"> -->
 
-                                            <a href="/insumo/asignar_insumos/{{c.codigo_tratamiento}}" class="btn btn-info">
+                                            <a href="/insumo/listar_insumos_asignados/{{c.codigo_tratamiento}}" class="btn btn-info">
 
                                             <i class="bi-pencil-square"></i>
-                                            Agregar insumos
+                                            Insumos
                                         </a>
                                     </td>
                                     <td>
