--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/modificar_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/modificar_tratamiento.html
@@ -34,7 +34,12 @@
                         </div> 
 
                 </form>
-                
+                <div>
+                    <a class="btn btn-outline-secondary" type="button" href="/insumo/asignar_insumos/{{tratamiento.codigo_tratamiento}}" >
+
+                        Agregar insumos
+                    </a>
+                </div>
            <div>
       </div>
 
