--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/asignar_insumo.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/asignar_insumo.html
@@ -5,7 +5,7 @@
 <div class= "col-12 col-md-8 offset-md-2" >
         <div class="card">
             <br>
-            <center>  <h2>Asignar Insumo</h2> </center>
+            <center>  <h2>Insumos</h2> </center>
             <!-- <div class="card-body"> -->
                 <form method="POST"id="group_form" novalidate="">
                     {%csrf_token%}
