--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/calendar.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/calendar.html
@@ -82,7 +82,7 @@
                 <div class="card-body">
                         <center> 
                             
-                            <h2 <i class="bi bi-calendar"> Calendario| Citas</i> </h2>
+                            <h2 <i class="bi bi-calendar"> Calendario del Odontólogo| Citas</i> </h2>
                         </center>
                 </div>
 
