--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/modificar_cita_usuario.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/modificar_cita_usuario.html
@@ -25,8 +25,11 @@
                         
                     <h2 <i class="bi bi-calendar"></i> Modificar | Cita</i> </h2><br>
                     <center><h5> <b>Paciente:</b> <i>{{persona.nombre}} {{persona.apellido}}</i> </h5></center>
-                      <center <b>Fecha de nacimiento:</b> <i>{{persona.fecha_nacimiento}} </i> </center>
-                    
+                    <div class="alert alert-success " role="alert">
+                        <small> 
+                         <b>Fecha de nacimiento:</b> <i>{{persona.fecha_nacimiento}} </i>
+                        </small>
+                    </div>
 
                 </center>
               
