--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/mensajes/insumo_asignado_exitoso.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/mensajes/insumo_asignado_exitoso.html
@@ -13,7 +13,7 @@
                     <br>
                     <a class="btn btn-primary" href ="/insumo/listar_insumos_asignados/">
                         <i class="bi bi-check2-square"></i>
-                        OK
+                        Aceptar
                     </a>
                 </center>
                 <br>
