--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_funcionario.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_funcionario.html
@@ -21,7 +21,23 @@
 					</table>
 					<br>
 					<br>
+					  <form  class="form-inline" method="POST">
+                            {% csrf_token %}
+                            <div class="input-group">
+                                <input type="search" name="q"  class="form-control bg-light border-0 small" placeholder="Buscar por el nombre " aria-label="search" value="{{request.POST.buscar}}" >
+                                <br>
+                                <div class="input-group-append">
+                                    <button  class="btn btn-outline-primary my-2 my-sm-0" type="submit">
+                                        <!--ICONO LUPA-->
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                                        </svg>
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
 					<br>
+					
 
 					<table class="table table-striped table-hover">
 						<thead>
