--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/agregar_cita_usuario.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/agregar_cita_usuario.html
@@ -17,28 +17,26 @@
 {%block content%}
   
 
-  {%if perms.gestion_agendamiento.change_cita%}
+{%if perms.gestion_agendamiento.view_cita%}
     <div class="container">
         <div class="card">
             <div class="card-body">
                 <center> 
                         
-                    <h2 <i class="bi bi-calendar"></i> Modificar | Cita</i> </h2><br>
-                    <center><h5> <b>Paciente:</b> <i>{{persona.nombre}} {{persona.apellido}}</i> </h5></center>
-                      <center <b>Fecha de nacimiento:</b> <i>{{persona.fecha_nacimiento}} </i> </center>
-                    
-
+                    <h2 <i class="bi bi-calendar"></i> Agregar Cita</i> </h2>
                 </center>
-              
+              <br>
+               <center><h5> <b>Paciente:</b> <i>{{persona.nombre}} {{persona.apellido}}</i> </h5></center>
                
+                <div class="alert alert-info col-12 col-md-6 offset-md-3" role="alert">
+                   <small>
+                  <center> <b>Fecha de nacimiento:</b> <i>{{persona.fecha_nacimiento}} </i></center>
+                   </small>
+                </div>
+              
 
                 <form method="POST" id="group_form" novalidate="">
-                    {%csrf_token%}
-                        {%if mensaje%}
-                            <div class="alert alert-success" role="alert">
-                                  ✅ Cita modificada
-                            </div>
-                            {%endif%}
+                     {%csrf_token%}
                     <div style="margin: 20px;" >
                         <br>
                         <div class="form-group">
@@ -46,37 +44,38 @@
                                 {{form.tratamiento_solicitado}} <br>
                         </div>
                         <br>
-
                         <div class="form-group">
                            <label for="{{form.fecha.name}}">{{form.fecha.label}}</label>
                             {{form.fecha}}
                         </div>
+                         
+                            <br>
+                       
+                         <div class="form-group">
+                            <label for="hora_atencion"> Hora de atencion</label>
+                                {{form.hora_atencion}} <i class="bi bi-alarm"></i> <br>
+                        </div>
                         <br>
-                       <div class="form-group">
-                           <label for="{{form.hora_atencion.name}}"> {{form.hora_atencion.label}}</label>
-                            {{form.hora_atencion}}
-                        </div> 
-                         <br>
                         <div class="form-group">
                           <label for="profesional"> Elegir al Profesional: </label> 
                             {{form.profesional}}
-                        </div>
-                        <br>
-                        {%if perms.gestion_agendamiento.view_cita%}
-                         <div class="form-group">
+                        </div> 
+                           
+                         </p>
+                        <div class="form-group">
                             <label for="{{form.estado.name}}">{{form.estado.label}}</label>
                                 {{form.estado}}
                         </div> 
-                        {%endif%}
+                             
+                      
                     </div>
-                   
 
                     <div class="d-flex justify-content-center">
                         <button class="btn btn-primary" type="submit" style="margin: 10px;">
                             <i class="bi-save"></i>
                             Guardar
                         </button>
-                        <a href="/agendamiento/listado_citas/ " class="btn btn-danger" style="margin: 10px;">
+                        <a href="/agendamiento/listado_citas " class="btn btn-danger" style="margin: 10px;">
                             <i class="bi-x-circle"></i>
                             Cancelar
                         </a>
