--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/modificar_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/modificar_tratamiento.html
@@ -25,19 +25,27 @@
                    
 
                         <br>
-                        <div class="d-flex justify-content-center">
+                        <div class="d-flex justify-content-center">  
+                            <button class="btn btn-primary" type="submit" style="margin: 10px;">
+                                <i class="bi-save"></i>
+                               Modificar y Guardar
+                            </button>
                             <!--tipo submit para enviar,luego son clases y colores btn, y btnblock para que muestre a lo largo de la tarjeta-->
-                            <input type="submit" value="Modificar y Guardar " class= "btn btn-primary btn-block txt-white" name="_save">
                             &nbsp;
-                            <input type="reset" value="Cancelar" class= "btn btn-secondary btn-block txt-white">  
+                          <a href="/tratamiento/listar_tratamiento/" class="btn btn-danger" style="margin: 10px;">
+                            <i class="bi-x-circle"></i>
+                            Cancelar
+                        </a>
                         
                         </div> 
 
                 </form>
-                <div>
-                    <a class="btn btn-outline-secondary" type="button" href="/insumo/asignar_insumos/{{tratamiento.codigo_tratamiento}}" >
+                <hr>
+               
+                <div >
+                    <a class="btn btn-outline-info" type="button" href="/insumo/asignar_insumos/{{tratamiento.codigo_tratamiento}}" >
 
-                        Agregar insumos
+                       <b style ="font-size:19px;"> Insumos</b>
                     </a>
                 </div>
            <div>
