--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -257,13 +257,15 @@
                                                 Agendamiento</a>
                                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                                   <!--Opcion 6.1 -->
-                                                  <li><a class="dropdown-item" href="/agendamiento/calendario_usuario">
-                                                        <strong  style="color:blue; font-size:16px;" >
-                                                                • Calendario 
-                                                        </strong></li></a>
+                                                
                                                   {%if perms.gestion_agendamiento.add_cita%}
                                                   <li><a class="dropdown-item" href="/agendamiento/usuario_addCita/{{user.numero_documento}}">• Agendar una cita </li></a>
                                                   {% endif %}
+                                                  <li><a class="dropdown-item" href="/agendamiento/calendario_usuario">
+                                                    <strong  style="color:blue; font-size:16px;" >
+                                                            • Calendario 
+                                                    </strong>
+                                                  </li></a>
                                                  <br>
                                                   {%if perms.gestion_agendamiento.view_cita%}
                                                   <li><a class="dropdown-item" href="/agendamiento/calendar">
